--- a/pom.xml
+++ b/pom.xml
@@ -60,16 +60,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.bgee.log4jdbc-log4j2</groupId>
-            <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
-            <version>1.16</version>
+            <groupId>com.integralblue</groupId>
+            <artifactId>log4jdbc-spring-boot-starter</artifactId>
+            <version>RELEASE</version>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>com.devskiller</groupId>-->
-            <!--<artifactId>jfairy</artifactId>-->
-            <!--<version>RELEASE</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>com.github.javafaker</groupId>
@@ -86,6 +80,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
